tests/baselines/reference/stringLiteralTypesInUnionTypes03.errors.txt
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes03.ts(7,5): error TS2365: Operator '===' cannot be applied to types '"foo" | "bar" | number' and 'string'.
tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes03.ts(10,10): error TS2365: Operator '!==' cannot be applied to types '"foo" | "bar" | number' and 'string'.


==== tests/cases/conformance/types/stringLiteral/stringLiteralTypesInUnionTypes03.ts (2 errors) ====
    
    type T = number | "foo" | "bar";
    
    var x: "foo" | "bar" | number;
    var y: T = "bar";
    
    if (x === "foo") {
        ~~~~~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types '"foo" | "bar" | number' and 'string'.
        let a = x;
    }
    else if (x !== "bar") {
             ~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types '"foo" | "bar" | number' and 'string'.
        let b = x || y;
    }
    else {
        let c = x;
        let d = y;
        let e: (typeof x) | (typeof y) = c || d;
    }
    
    x = y;
    y = x;